frontend/assets/styles.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

// Layout -----------------------------------------------

:root {
  --column-width: 72px;
  --gutter-width: 24px;
  --container-width: calc(
    (var(--column-width) * 12) + (var(--gutter-width) * 11)
  );
}

// Centered container
.container {
  max-width: var(--container-width); /* Matches 12-column layout */
  margin: 0 auto; /* Centers the container */
  padding: 0 var(--gutter-width); /* Adds responsive padding */
  display: grid; /* Use grid for flexible layouts */
  grid-template-columns: repeat(12, 1fr); /* 12-column grid */
  gap: var(--gutter-width); /* Gutter spacing between columns */
}

// Utility classes for column spans: Loop to generate col-span-1 to col-span-12
@for $i from 1 through 12 {
  .col-span-#{$i} {
    flex: 0
      0
      calc(var(--column-width) * #{$i} + var(--gutter-width) * (#{$i} - 1));
    max-width: calc(
      var(--column-width) * #{$i} + var(--gutter-width) * (#{$i} - 1)
    );
    width: 100%;
  }
}

// Fonts -----------------------------------------------

body {
  font-family: 'Inter', sans-serif;
  color: var(--color-cold-night) !important;
}

h1 {
  font-size: 32px !important;
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night) !important;
}

h2 {
  font-size: 20px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

h3 {
  font-size: 16px !important;
  font-weight: 600 !important; // Medium
  color: var(--color-cold-night) !important;
}

a {
  color: var(--color-cold-purple) !important;
  text-decoration: none !important;
  font-weight: 400 !important; // Regular
}

.title-container {
  width: 100%;
  text-align: center;
}

.copy {
  @extend .result-value-small;
  margin-top: 24px !important;
  margin-bottom: 24px !important;
}

.markdown-body h2 > a,
.markdown-body h3 > a,
.prose h2 > a,
.prose h3 > a,
.content h2 > a,
.content h3 > a {
  color: inherit !important;
  text-decoration: none;
}

h1 > a,
h2 > a,
h3 > a,
h4 > a,
h5 > a,
h6 > a {
  font-weight: inherit !important;
  color: inherit !important;
  text-decoration: none !important;
}

// Lists
ol {
  list-style: decimal !important; // Ensure numbers appear
}

ul {
  list-style-type: disc !important;
  margin: 0 !important;
  padding: 0.5rem 0 1.5rem 1.5rem !important;
}

li {
  margin: 0 !important;
}

li::marker {
  color: var(--color-cold-night) !important;
}

.prose {
  font-size: 14px !important;
  line-height: 28px !important;
  color: var(--color-cold-night) !important;
}

.prose li {
  margin-bottom: 12px !important;
  color: var(--color-cold-night) !important;
}

.prose strong,
.prose b {
  color: inherit; /* Inherit the color from the parent element */
  font-weight: 600 !important; // Medium
}

// Labels
.label {
  font-size: 12px !important;
  font-weight: 700 !important;
  text-transform: uppercase;
  margin-right: 12px;
  color: var(--color-cold-night);
}

.label-key {
  @extend .label;
  padding: 0;
}

.label-key-provision-article {
  @extend .label-key;
  text-transform: none;
}

.label-key-provision-toggle {
  @extend .label-key;
  font-weight: 600 !important;
  text-transform: capitalize;
  font-size: 10px !important;
  @apply text-sm text-gray-600;
}

.label-jurisdiction {
  @extend .label;
  background-color: var(--color-cold-gray-alpha);
  padding: 3px 7px;
  display: inline-flex;
  align-items: center;
  flex-shrink: 0;
}

.label-question {
  @extend .label;
  color: var(--color-label-question);
  padding: 2px 6px;
  background-color: var(--color-label-question-alpha);
  border: 1px solid var(--color-label-question);
}

.label-court-decision {
  @extend .label;
  color: var(--color-label-court-decision);
  padding: 2px 6px;
  background-color: var(--color-label-court-decision-alpha);
  border: 1px solid var(--color-label-court-decision);
}

.label-domestic-instrument {
  @extend .label;
  color: var(--color-label-domestic-instrument);
  padding: 2px 6px;
  background-color: var(--color-label-domestic-instrument-alpha);
  border: 1px solid var(--color-label-domestic-instrument);
}

.label-literature {
  @extend .label;
  color: var(--color-label-literature);
  padding: 2px 6px;
  background-color: var(--color-label-literature-alpha);
  border: 1px solid var(--color-label-literature);
}

.label-theme {
  @extend .label;
  color: var(--color-cold-night-alpha);
  background-color: white;
  padding: 2px 6px;
  border: 1px solid var(--color-cold-night-alpha-25);
}

// Results
.result-value {
  font-weight: 700 !important; // Bold
  color: var(--color-cold-night);
  word-wrap: break-word; // Allows breaking within words if necessary
  word-break: break-word; // Breaks words that are too long
  white-space: pre-wrap; // Preserves whitespace and line breaks, but also allows wrapping
}

.result-value-large {
  @extend .result-value;
  font-size: 28px !important;
  line-height: 28px !important;
  margin-top: 6px !important;
  margin-bottom: 24px !important;
}

.result-value-medium {
  @extend .result-value-large;
  font-size: 20px !important;
}

.result-value-small {
  @extend .result-value-large;
  font-size: 14px !important;
  font-weight: 400 !important; // Regular
  line-height: 26px !important;
  // margin: 0 !important;
  white-space: normal;
}

.result-value-small-citation {
  @extend .result-value-small;
  font-family: 'IBM Plex Mono', monospace;
  font-size: 12px !important;
  background-color: var(--color-cold-gray-alpha);
  padding: 0.8em 1em 0.8em 1em;
  line-height: 1.8em !important;
}

// UI Elements -----------------------------------------------

.suggestion-button {
  color: var(--color-cold-purple) !important;
  font-size: 20px !important;
  font-weight: 500 !important;
  line-height: 1.6em !important;
  text-decoration: none !important;
  padding: 0 !important;
}

.link-button {
  @extend .suggestion-button;
  font-size: 14px !important;
  font-weight: 400 !important; // Regular
}

.showmoreless-icon-large {
  font-size: 1.4rem !important;
  transform: translateY(4px) !important;
}

// Info Box in Jurisdiction Map
.info {
  position: absolute;
  z-index: 1000;
  background: white;
  font-family: 'Inter', Arial, sans-serif;
  padding-right: 12px;
  padding-bottom: 6px;
}

// USelectmenu
.cold-uselectmenu button {
  box-shadow: none !important;
  border: 1px solid var(--color-cold-gray) !important;
  border-radius: 0 !important;
  background-color: white !important;
  height: 42px;
}

.cold-uselectmenu.non-all-selected button {
  border-color: var(--color-cold-purple) !important;
  color: var(--color-cold-purple) !important;
}

// Popper Style
ul[role='listbox'][data-headlessui-state] {
  border-radius: 0 !important;
  box-shadow: none !important;
  border: 1px solid var(--color-cold-gray) !important;
  padding: 0 !important;
}

ul[role='listbox'] input[role='combobox'][data-headlessui-state='open'] {
  margin-bottom: 0 !important;
}

ul[role='listbox'] li {
  margin: 0 !important;
  padding-top: 0.75rem !important;
  padding-bottom: 0.75rem !important;
}

// Popper Selected Icon
ul[role='listbox'] li[aria-selected='true'] .iconify {
  color: var(--color-cold-purple) !important;
  width: 1rem !important;
}

// Popper Input Size
ul[role='listbox'] input {
  padding-top: 1rem !important;
  padding-bottom: 1rem !important;
  border-color: var(--color-cold-gray) !important;
}

// Popper Hover
ul[role='listbox'] li:hover {
  background-color: var(--color-cold-purple-alpha) !important;
}

ul[role='listbox'] li[data-headlessui-state='selected'] {
  background-color: var(--color-cold-purple-alpha) !important;
}

ul[role='listbox'] li[aria-selected='true'],
ul[role='listbox'] li[data-headlessui-state='active'],
ul[role='listbox'] li[data-headlessui-state='active']:hover,
ul[role='listbox'] li[data-headlessui-state='selected'],
ul[role='listbox'] li[data-headlessui-state='selected']:hover {
  background-color: var(--color-cold-purple-alpha) !important;
  border-radius: 0 !important;
}

// CoLD Card
.cold-ucard {
  margin-bottom: 24px;
}

.cold-ucard-info {
  @extend .cold-ucard;
  margin-bottom: -8px;
  background-color: var(--cold-dark-gray) !important;
}

// Curser on plot
.js-plotly-plot .nsewdrag {
  cursor: default; /* Set default arrow cursor for non-interactive elements */
}

